# ccgame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/snake/: CMakeLists.txt  main.cc
example/circle/: CMakeLists.txt  main.cc
example/snake/: main.cc
include/: ccgame.h
src/: context.cc  context.h  sdl.cc  sdl.h  timer.cc  timer.h  view.cc  view.h  window.cc  window.h
src/view/: imageview.cc  imageview.h  paintview.cc  paintview.h  rectview.cc  rectview.h  textureview.cc  textureview.h  textview.cc  textview.h
